--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "concat:css": "concat -o css/style.css css/icon-font.css css/main.css",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Thomas",
   "license": "ISC",
@@ -15,9 +15,11 @@
     "node-sass": "^4.12.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.2.5",
     "express": "^4.17.1",
     "jquery-visible": "^1.2.0",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "pug": "^2.0.4"
   }
 }
